--- a/AdnAlquilerEspacio/app/src/main/res/values/strings.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">AdnAlquilerParqueadero</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="resumen">Resumén</string>
+    <string name="motocicletas">Motocicletas</string>
+    <string name="automoviles">Automoviles</string>
+
 </resources>
