--- a/AdnAlquilerEspacio/app/src/main/res/values/strings.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="resumen">Resumén</string>
-    <string name="motocicletas">Motocicletas</string>
-    <string name="automoviles">Automoviles</string>
+    <string name="vehiculos">Vehiculos</string>
 
 </resources>
