Modulo Room agregado
Creacion de modulo room para inyectar adicionalmente se agrega carpeta de servicios

--- a/AdnAlquilerEspacio/app/src/main/res/values/strings.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="resumen">Resumén</string>
     <string name="vehiculos">Vehiculos</string>
 
+
+    <string-array name="Vehiculos">
+        <item>AUTOMOVIL</item>
+        <item>MOTOCICLETA</item>
+    </string-array>
+
 </resources>
