--- a/AdnAlquilerEspacio/app/src/main/res/values/strings.xml
+++ b/AdnAlquilerEspacio/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="resumen">Resumén</string>
     <string name="vehiculos">Vehiculos</string>
+    <string name="vehiculo_ya_registrado">Ya se registro un vehiculo con esta placa</string>
+    <string name="ingresar_correctos">Deben ingresar todos los datos</string>
 
 
     <string-array name="Vehiculos">
